Closed Bug 1605250 Opened 6 years ago Closed 6 years ago

Lots of include-what-you-use errors in dom/localstorage

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: botond, Assigned: botond)

Details

Attachments

(1 file)

No description provided.
Priority: -- → P2
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/253a1f482bdb Fix include-what-you-use errors in dom/localstorage. r=dom-workers-and-storage-reviewers,asuth
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: