Bug 1605250 - Fix include-what-you-use errors in dom/localstorage. r=dom-workers-and-storage-reviewers,asuth

Differential Revision: https://phabricator.services.mozilla.com/D57899